--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "if-env": "^1.0.4",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "express-openid-connect": "^2.17.0",
+
   }
 }
