--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "express": "^4.18.2",
     "if-env": "^1.0.4",
     "pg": "^8.11.3",
-    "express-openid-connect": "^2.17.0",
+    "express-openid-connect": "^2.17.0"
 
   }
 }
