--- a/package.json
+++ b/package.json
@@ -10,12 +10,35 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@auth0/auth0-react": "^2.2.1",
+    "@babel/core": "^7.23",
+    "@babel/plugin-syntax-flow": "^7.22",
+    "@babel/plugin-transform-react-jsx": "^7.22",
+    "@fortawesome/fontawesome-svg-core": "^1.2",
+    "@fortawesome/free-solid-svg-icons": "^5.8",
+    "@fortawesome/react-fontawesome": "^0.2",
+    "auth0": "^4.0.1",
+    "autoprefixer": "^10.4",
+    "axios": "^1.5.1",
+    "config": "^3.3.9",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-oauth2-jwt-bearer": "^1.6.0",
+    "express-openid-connect": "^2.17.0",
+    "helmet": "^7.0.0",
+    "highlight.js": "^10.0",
     "if-env": "^1.0.4",
+    "morgan": "^1.10.0",
+    "npm-run-all": "^4.1",
+    "package": "^1.0.1",
     "pg": "^8.11.3",
-    "express-openid-connect": "^2.17.0"
-
+    "postcss": "^8.4",
+    "react": "^18",
+    "react-dom": "^18",
+    "react-router-dom": "^5.3.4",
+    "react-scripts": "^5.0.1",
+    "reactstrap": "^9.2",
+    "typescript": "^4.9"
   }
 }
