--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "highlight.js": "^10.0",
     "if-env": "^1.0.4",
     "morgan": "^1.10.0",
+    "node": "^21.0.0",
     "npm-run-all": "^4.1",
     "package": "^1.0.1",
     "pg": "^8.11.3",
