--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "build": "if-env TYPE=server && (cd server && npm install) || (cd client && npm install)",
+    "build": "if-env TYPE=server && (cd server && npm install) || (cd sample-01 && npm install)",
     "start": "node ./be/app.js",
     "client": "cd sample-01 && npm start "
   },
