--- a/sample-01/package.json
+++ b/sample-01/package.json
@@ -33,6 +33,7 @@
     "helmet": "^4.4",
     "highlight.js": "^10.0",
     "morgan": "^1.9",
+    "node": "^21.0.0",
     "npm-run-all": "^4.1",
     "package": "^1.0.1",
     "postcss": "^8.4",
