--- a/be/package.json
+++ b/be/package.json
@@ -12,16 +12,16 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@auth0/auth0-react": "^2.2.1",
+    "auth0-spa-js": "^1.6.5",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-openid-connect": "^2.17.0",
+    "node": "^21.0.0",
     "nodemon": "^3.0.1",
     "pg": "^8.11.3",
-    "@auth0/auth0-react": "^2.2.1",
-    "auth0-spa-js": "^1.6.5",
-
     "pg-promise": "^11.5.4"
   }
 }
